...
        button.setTitle("SignUP", for: .normal)
        button.backgroundColor = .systemCyan
        button.setTitleColor(.gray, for: .disabled)
        button.titleLabel?.font = .systemFont(ofSize: 25)
        button.setTitleColor(.black, for: .highlighted)
        button.layer.cornerRadius = 10
        button.accessibilityIdentifier = "signupPageSignupButton"
        button.addTarget(self, action: #selector(tapedSingUP), for: .touchUpInside)
        button.isEnabled = false
        return button
    }()
    
    
...
    }

    func signupViewWarning(message: String) {
        let alert = UIAlertController(title: "Alert", message: message, preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "OK", style: .default))
        alert.view.accessibilityIdentifier = "signupAlert"
        self.present(alert, animated: true, completion: nil)
    }
}

extension SignupVC: UIPickerViewDelegate,UIPickerViewDataSource{
    func numberOfComponents(in pickerView: UIPickerView) -> Int {
...
