...
    lazy var logOutButton: UIButton = {
        let button = UIButton()
        button.setTitle("LogOut", for: .normal)
        button.setTitleColor(.black, for: .normal)
        button.addTarget(self, action: #selector(Logout), for: .touchUpInside)
        button.backgroundColor = .gray
        button.accessibilityIdentifier = "logout"
        button.sizeToFit()
        return button
    }()
    
    lazy var profile : UIView = {
        let profile = UIView()
        profile.backgroundColor = .gray
        profile.translatesAutoresizingMaskIntoConstraints = false
        profile.isHidden = true
        return profile
    }()
...
